--- a/src/pages/includes/wallet-selector/wallet-selector.html
+++ b/src/pages/includes/wallet-selector/wallet-selector.html
@@ -16,7 +16,7 @@
   <div *ngIf="walletsBtc && walletsBtc[0]">
     <ion-item-divider>
       <div class="title">
-        <span translate>Viacoin Wallets</span>
+        <span translate>MonetaryUnit Wallets</span>
       </div>
     </ion-item-divider>
 
